--- a/public/css/navbarstyle.css
+++ b/public/css/navbarstyle.css
@@ -43,7 +43,7 @@ html, body {
 }
 
 .navbar-brand {
-    margin-right: 90px; /* Adjust the value as needed */
+    margin-right: 110gipx; /* Adjust the value as needed */
 }
 
 /* Default spacing for nav-items */
