--- a/public/css/navbarstyle.css
+++ b/public/css/navbarstyle.css
@@ -20,13 +20,14 @@ html, body {
     color: white !important;
     text-align: center;
 }
-
-/* Center logo and brand text */
-.navbar-brand img {
-    display: block;
-    margin: 0 auto;
+.navbar-brand{
+    margin-left: 75px;
 }
 
+.navbar-brand img {
+    width: 80px;
+    height: 80px;
+}
 .brand-text {
     text-align: center;
     font-size: 0.6rem;
@@ -40,6 +41,8 @@ html, body {
     font-size: 1rem;
     font-weight: bold;
     height: 40px;
+    margin-right: 80px;
+
 }
 
 .navbar-brand {
@@ -56,6 +59,7 @@ html, body {
     .navbar-nav {
         flex-direction: column; /* Stack items vertically */
         text-align: center;
+    
     }
 
     .navbar-nav .nav-item {
@@ -67,4 +71,13 @@ html, body {
         margin: 10px auto;
         height: auto;
     }
+    .navbar-brand img {
+        margin-left: -70px; /* Remove any margin from the left */
+        
+    }
+    .navbar-brand img {
+        width: 150px;
+        
+    }
 }
+
